kubernetes/default/hello-world/overlays/5963/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: ingress-nginx-private
  rules:
    - host: hello-world.5963.kian.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80
  tls:
    - hosts:
        - hello-world.5963.kian.sh
      secretName: hello-world-tls
